ytt/resources/deployment.yaml
#@ load("@ytt:data", "data")

apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  labels:
    app.kubernetes.io/name: #@ data.values.name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: #@ data.values.name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: #@ data.values.name
    spec:
      containers:
      - name: main
        image: #@ data.values.image.repository + ":" + data.values.image.tag
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        #@ if data.values.db.enabled.helm or data.values.db.enabled.crossplane.local or data.values.db.enabled.crossplane.google or data.values.db.enabled.crossplane.aws or data.values.db.enabled.crossplane.azure:
