ytt/resources/service.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  labels:
    app.kubernetes.io/name: #@ data.values.name
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: #@ data.values.name
