ytt/resources/gateway.yaml
#@ load("@ytt:data", "data")

#@ if data.values.progressiveDelivery.enabled and data.values.progressiveDelivery.type == "argo-rollouts" and data.values.istio.enabled:
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: #@ data.values.name + "-gateway"
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
#@ end
